	* gm2/gm2-libs/RTExceptions.mod:  new procedure addFile
	  and stripPath which extracts the filename from the
	  complete path.  Bug reported by Christoph Schlegel.
	* gm2/gm2-libs-iso/ClientSocket.mod:  modified exception
	  message given the increased push back buffer.
	* gm2/gm2-libs-iso/wrapsock.c:  modified the push back
	  routines to work with multiple consecutive push back.

2010-12-01       Gaius Mulley <gaius@gnu.org>

	* gm2/Make-lang.in:  added example checking rule,
	  gm2-check-examples.
	* gm2/config-lang.in:  create gm2/examples/callingC/Makefile.
	* gm2/gm2spec.c:  fixed off by 1 error in strncmp, use strlen
	  to calculate length of string to prevent this reoccuring.
	* gm2/examples/callingC/Makefile.in:  modified to use correct
	  path.
	* gm2/examples/cplusplus/cppcatchm2/Makefile.in:  modified to
	  use correct path.
	* gm2/examples/cplusplus/m2catchcpp/Makefile.in:  modified to
	  use correct path.
	* gm2/examples/cpp/Makefile.in:  modified to
	  use correct path.
	* gm2/examples/gravity/Makefile.in:  modified to
	  use correct path.
	* gm2/examples/hello/Makefile.in:  modified to
	  use correct path.
	* gm2/examples/map/Makefile.in:  modified to
	  use correct path.
	* gm2/examples/ncurses/Makefile.in:  modified to
	  use correct path.
	* gm2/examples/swig/exceptions/Makefile.in:  modified to
	  use correct path.
	* gm2/examples/swig/strlib/Makefile.in:  modified to
	  use correct path.
	* gm2/examples/swig/tiny/Makefile.in:  modified to
	  use correct path.
	* gm2/gm2-compiler/PCSymBuild.mod:  detect error if
	  trying to assign a constant from an unresolved symbol.
	* gm2/gm2-libs-pim/NumberConversion.def:  fixed dates.
	* gm2/gm2-libs-pim/NumberConversion.mod:  fixed dates.

2010-11-26       Gaius Mulley <gaius@gnu.org>

	* gm2/gm2.texi:  changed documentation to use -fonlylink
          where appropriate and remove the -c flag for the simple
	  examples.
	* gm2/examples/hello/Makefile.in:  removed compile without
	  link stage.